* macro.tex (Ra): Add `\ensuremath'.
* res/Makefile: Generate PDF files instead of PNG files.

* res/ch01-ex14.dot: Comment out meaningless size definitions.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@27 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/res/Makefile
+++ b/res/Makefile
@@ -1,12 +1,12 @@
 DOTS = $(wildcard *.dot)
-PNGS = $(DOTS:.dot=.png)
+PDF = $(DOTS:.dot=.pdf)
 
-%.png: %.dot
-	dot -Tpng $< -o $@
+%.pdf: %.dot
+	dot -Tpdf $< -o $@
 
-all: $(PNGS)
+all: $(PDF)
 
 clean:
-	rm -rf $(PNGS)
+	rm -rf $(PS)
 
 .PHONY: all clean
